# serializer version: 1
# name: test_info_output_extended
  dict({
    'auth_dir': str,
    'cache_dir': str,
    'cache_size': str,
    'config_locations': list,
    'environments_info': list([
      dict({
        'channels': list([
          'conda-forge',
        ]),
        'dependencies': list([
        ]),
        'environment_size': str,
        'features': list([
          'default',
        ]),
        'name': 'default',
        'platforms': list,
        'prefix': str,
        'pypi_dependencies': list([
        ]),
        'solve_group': None,
        'system_requirements': dict({
          'archspec': None,
          'cuda': None,
          'libc': None,
          'linux': None,
          'macos': None,
        }),
        'tasks': list([
        ]),
      }),
      dict({
        'channels': list([
          'conda-forge',
        ]),
        'dependencies': list([
          'python',
        ]),
        'environment_size': str,
        'features': list([
          'py312',
          'default',
        ]),
        'name': 'py312',
        'platforms': list,
        'prefix': str,
        'pypi_dependencies': list([
        ]),
        'solve_group': None,
        'system_requirements': dict({
          'archspec': None,
          'cuda': None,
          'libc': None,
          'linux': None,
          'macos': None,
        }),
        'tasks': list([
        ]),
      }),
    ]),
    'global_info': dict({
      'bin_dir': str,
      'env_dir': str,
      'manifest': str,
    }),
    'platform': str,
    'project_info': dict({
      'last_updated': str,
      'manifest_path': str,
      'name': 'test',
      'pixi_folder_size': str,
      'version': None,
    }),
    'version': str,
    'virtual_packages': list,
  })
# ---
# name: test_pixi_add_alias
  '''
  
  [workspace]
  name = "test"
  channels = []
  platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
  
  [tasks]
  dummy-a = [{ task = "dummy-b" }, { task = "dummy-c" }]
  
  [target.linux-64.tasks]
  linux-alias = [{ task = "dummy-b" }, { task = "dummy-c" }]
  
  '''
# ---
# name: test_pixi_add_task
  '''
  
  [workspace]
  name = "test"
  channels = []
  platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
  
  [tasks]
  test = { cmd = "echo 'Hello {{name | title}}'", args = [{ arg = "name", default = "default" }] }
  test-alias = [{ task = "test" }]
  test-depends-on = [{ task = "test", args = ["arg"], environment = "env" }]
  test-depends-on-two-args = [{ task = "test", args = ["arg", "arg2"], environment = "env" }]
  test-depends-on-env-only = [{ task = "test", environment = "env" }]
  test-depends-on-args-only = [{ task = "test", args = ["arg", "arg2"] }]
  
  [feature.py312.target.linux-64.tasks]
  test-full-spec = { cmd = "echo 'Hello {{name | title}}'", args = ["name"], depends-on = ["test", { task = "test-alias", args = ["arg"] }], env = { VAR = "val", VAR2 = "val2" } }
  
  '''
# ---
# name: test_pixi_task_list_json
  list([
    dict({
      'environment': 'default',
      'features': list([
        dict({
          'name': 'default',
          'tasks': list([
            dict({
              'args': list([
                dict({
                  'default': 'World',
                  'name': 'name',
                }),
              ]),
              'clean_env': False,
              'cmd': "echo 'Hello {{name | title}}'",
              'cwd': None,
              'depends_on': list([
              ]),
              'description': None,
              'env': None,
              'inputs': None,
              'name': 'test-task',
              'outputs': None,
            }),
          ]),
        }),
      ]),
    }),
  ])
# ---
